data generation code done

--- a/Code/3_result_visualization.ipynb
+++ b/Code/3_result_visualization.ipynb
@@ -42,9 +42,9 @@
     "%matplotlib inline\n",
     "\n",
     "# All sensor node information stored in `inputs.csv`\n",
-    "input_data_path = \"../input/inputs.csv\"\n",
+    "input_data_path = \"../input/data.csv\"\n",
     "# The complete solution flight path stored in `final_output.csv`\n",
-    "output_data_path = \"../output/final_output.csv\"\n",
+    "output_data_path = \"../output/final_path.csv\"\n",
     "# The ensemble output data stored in `ensemble_output.csv`\n",
     "ensemble_path = \"../output/ensemble_output.csv\"\n",
     "# The number of files (also can be considered as the number of PDVs)\n",
